--- a/index.ipynb
+++ b/index.ipynb
@@ -145,7 +145,7 @@
     }
    ],
    "source": [
-    "ends_with_com = \"art.vandelay@vandelay.co\" # False\n",
+    "ends_with_com = \"art.vandelay@vandelay.co\".# False\n",
     "ends_with_com = .endswith(\".com\")"
    ]
   },
