--- a/index.ipynb
+++ b/index.ipynb
@@ -132,21 +132,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-2-bdbd80feeda6>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-bdbd80feeda6>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    ends_with_com = .endswith(\".com\")\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ends_with_com = \"art.vandelay@vandelay.co\" .endswith(\".com\") # False\n",
-    "ends_with_com = .endswith(\".com\")"
+    "ends_with_com = \"art.vandelay@vandelay.co\" .endswith(\".com\") # False"
    ]
   },
   {
